tests/baselines/reference/superCallBeforeThisAccessing8(strict=true).errors.txt
superCallBeforeThisAccessing8.ts(2,17): error TS7006: Parameter 'c' implicitly has an 'any' type.
superCallBeforeThisAccessing8.ts(5,13): error TS7008: Member '_t' implicitly has an 'any' type.


==== superCallBeforeThisAccessing8.ts (2 errors) ====
    class Base {
        constructor(c) { }
                    ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    }
    class D extends Base {
        private _t;
                ~~
!!! error TS7008: Member '_t' implicitly has an 'any' type.
        constructor() {
            let x = {
                k: super(undefined), 
                j: this._t,  // no error
            }
        }
    }
    